css and shifting bugfix

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,6 +1,9 @@
 .container {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    position: relative;
+    right: 0;
+    left: 0;
 }
 
 .navBar {
