--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -20,6 +20,7 @@
 .toolbarLogo a {
     color: black;
     font-size: 5rem;
+    text-decoration: none;
 }
 
 .toolbarLogo a:hover,
